--- a/app/views/hybrid_bills/post.html.haml
+++ b/app/views/hybrid_bills/post.html.haml
@@ -1,1 +1,5 @@
-%h1 post
+#content.section--primary{ tabindex: '0' }
+  .container
+    %h1 Object to the High Speed Rail (West Midlands – Crewe) Bill
+
+    %h2 Post Phase Content
