--- a/app/views/hybrid_bills/pre.html.haml
+++ b/app/views/hybrid_bills/pre.html.haml
@@ -1,1 +1,26 @@
-%h1 pre
+#content.section--primary{ tabindex: '0' }
+  .container
+    %h1 Object to the High Speed Rail (West Midlands – Crewe) Bill
+    %br
+    .status--highlight
+      %p The petitioning period will open on 30 January 2018.
+
+%section
+  .container
+    %h2 Overview
+
+    %p Any individual, group of individuals, organisation or group of organisations affected by the High Speed Rail (West Midlands – Crewe) Bill can object to it.
+
+    %p
+      To find out more about the Bill, visit the
+      = link_to 'High Speed Two (HS2) Limited website', 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank'
+      %span.sr-only (This link will open in a new window).
+
+%section
+  .container
+    %h2 Objecting to the Bill
+
+    %p
+      For more information on how to object, visit the
+      = link_to 'High Speed Rail (West Midlands – Crewe) Bill Committee', 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank'
+      %span.sr-only (This link will open in a new window).
