--- a/app/views/hybrid_bills/steps/forms/_details_form.haml
+++ b/app/views/hybrid_bills/steps/forms/_details_form.haml
@@ -1,38 +1,42 @@
 = form_for petitioner_object, url: hybrid_bill_path(business_id, step: 'details') do |f|
   - if f.object.errors.any?
-    %p.sr-only{ aria: { assertive: 'live' } } Your form has errors. Please correct them and submit again.
+    .status--highlight.theme--warning
+      %p{ aria: { live: 'assertive' } } Your form has errors. Please correct them and submit again.
+    %br
 
-  - if include_group
-    - if local_assigns.fetch(:group_name, nil)
-      %fieldset
-        %legend.sr-only Please provide the name of the #{group_type}
+  %fieldset
+    %legend.sr-only Please provide details for the petitioner(s)
+
+    - if include_group
+      - if local_assigns.fetch(:group_name, nil)
         = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :on_behalf_of, label_value: group_name }
         %h2 Details of individual in #{group_type}
 
-    - else
-      = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :on_behalf_of }
+      - else
+        = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :on_behalf_of }
 
-  %fieldset
-    %legend.sr-only Please provide details for the individual petitioner
     = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :first_name, label_value: 'First name(s)', aria: { required: 'true' }, maxlength: 255 }
 
     = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :surname, label_value: 'Last name', aria: { required: 'true' }, maxlength: 255 }
 
-    %p Do you live in the UK?
-    = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: f, attribute: :in_the_uk, yes_class: 'country-uk', no_class: 'country-row' }
+    %br
+    %span Are you based in the UK?
+    %fieldset
+      %legend.sr-only Please select the country you're based in
+      = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: f, attribute: :in_the_uk, yes_class: 'country-uk', no_class: 'country-row' }
     #countrySelect
       = render partial: 'hybrid_bills/steps/forms/components/country_select', locals: { f: f, attribute: :country }
+    %br
 
     = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :address_1, label_value: 'Address line 1', aria: { required: 'true' }, maxlength: 255 }
 
     = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :address_2, label_value: 'Address line 2 (optional)', aria: { required: 'false' }, maxlength: 255 }
 
-    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :postcode, label_value: 'Post code', class: 'input__sm', aria: { required: 'true' }, maxlength: 10 }
+    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :postcode, label_value: 'Post code', class: 'input__sm', aria: { required: 'true' }, maxlength: 8, pattern:'[0-9a-zA-Z ]{5,}' }
 
     = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :email, aria: { required: 'true' }, maxlength: 255 }
 
     = render partial: 'hybrid_bills/steps/forms/components/check_box', locals: { f: f, attribute: :receive_updates }
-    %br
 
     = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :telephone, label_value: 'Phone', class: 'input__md', aria: { required: 'true' }, maxlength: 20 }
 
@@ -47,15 +51,19 @@
       = f.fields_for :hybrid_bill_agent, petitioner_object.hybrid_bill_agent do |a|
         %fieldset
           %legend.sr-only Please provide details for the main contact
+
           = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :first_name, label_value: 'First name(s)', aria: { required: 'true' }, maxlength: 255 }
 
           = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :surname, label_value: 'Last name', aria: { required: 'true' }, maxlength: 255 }
 
-          %p Do you live in the UK?
-          = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: a, attribute: :in_the_uk, yes_class: 'country-uk-rep', no_class: 'country-row-rep' }
-
+          %br
+          %span Are you based in the UK?
+          %fieldset
+            %legend.sr-only Please select the country you're based in
+            = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: a, attribute: :in_the_uk, yes_class: 'country-uk-rep', no_class: 'country-row-rep' }
           #countrySelectRep
             = render partial: 'hybrid_bills/steps/forms/components/country_select', locals: { f: a, attribute: :country }
+          %br
 
           = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :address_1, label_value: 'Address line 1', aria: { required: 'true' }, maxlength: 255 }
 
@@ -66,10 +74,10 @@
           = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :email, aria: { required: 'true' }, maxlength: 255 }
 
           = render partial: 'hybrid_bills/steps/forms/components/check_box', locals: { f: a, attribute: :receive_updates }
-          %br
 
           = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :telephone, :label_value => 'Phone', class: 'input__md', aria: { required: 'true' }, maxlength: 20 }
 
   = f.submit 'Next', class: 'btn--primary'
+
 %p
-  =link_to 'Back', hybrid_bill_path(@business_id, step: 'who-are-you-submitting-a-petition-for')
+  =link_to 'Back', hybrid_bill_path(@business_id, step: 'petition-online')
