--- a/app/views/hybrid_bills/steps/forms/components/_check_box.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_check_box.haml
@@ -1,3 +1,3 @@
 .input-group
   = f.check_box attribute
-  = f.label attribute, 'I would like to receive updates from the HS2 bill committee'
+  = f.label attribute, 'I would like to receive updates from the High Speed Rail (West Midlands - Crewe) Bill Committee'
