--- a/app/views/hybrid_bills/steps/forms/components/_radio_buttons_reversed.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_radio_buttons_reversed.haml
@@ -1,13 +1,11 @@
-%div
-  .input-group__inline
-    .input-group
-      = f.radio_button attribute, false, value: false, checked: true, class: local_assigns.fetch(:no_class, nil)
-      = f.label attribute, local_assigns.fetch(:no_label, 'No'), value: false
-  .input-group__inline
-    .input-group
-      = f.radio_button attribute, true, value: true, class: local_assigns.fetch(:yes_class, nil)
-      = f.label attribute, local_assigns.fetch(:yes_label, 'Yes'), value: true
-
+.input-group__inline
+  .input-group
+    = f.radio_button attribute, false, value: false, checked: true, class: local_assigns.fetch(:no_class, nil)
+    = f.label attribute, local_assigns.fetch(:no_label, 'No'), value: false
+.input-group__inline
+  .input-group
+    = f.radio_button attribute, true, value: true, class: local_assigns.fetch(:yes_class, nil)
+    = f.label attribute, local_assigns.fetch(:yes_label, 'Yes'), value: true
 
 - if f.object.errors[attribute].present?
-  %p.error_message Please select one
+  %p.message--error Please select one
