--- a/app/views/hybrid_bills/steps/terms-conditions.haml
+++ b/app/views/hybrid_bills/steps/terms-conditions.haml
@@ -1,7 +1,13 @@
-#content.hero.theme--grey-4{:tabindex => "0"}
+- page_title = title('Terms and conditions. Object to the High Speed Rail (West Midlands – Crewe) Bill')
+
+#content.hero.theme--grey-4{ tabindex: '0' }
   .container
-    %h1 Terms and conditions
-    %p.lead Step 5 of 5
+    %h1
+      Terms and conditions
+      %span.sr-only .
+      %span Object to the High Speed Rail (West Midlands – Crewe) Bill
+
+    %h2.typography--light Step 5 of 5
 
 %section
   .container
@@ -12,19 +18,22 @@
     %ul
       %li
         kept in the
-        %a{href: ''} Private Bill Office
+        = link_to 'Private Bill Office', 'http://www.parliament.uk/about/how/laws/bills/private/office/', target: '_blank'
+        %span.sr-only (This link will open in a new window).
         and as a record in the
-        %a{href: ''} Parliamentary Archives
-        \.
+        = link_to 'Parliamentary Archives', 'http://www.parliament.uk/business/publications/parliamentary-archives/', target: '_blank'
+        %span.sr-only (This link will open in a new window).
 
       %li
         sent to the
-        %a{href: ''} Department for Transport
+        = link_to 'Department for Transport', 'https://www.gov.uk/government/organisations/department-for-transport', target: '_blank'
+        %span.sr-only (This link will open in a new window).
         and
-        %a{href: ''} HS2 Ltd
-        after the petition has been accepted by the Private Bill Office.
+        = link_to 'High Speed Two (HS2) Limited website', 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank'
+        %span.sr-only (This link will open in a new window).
+        after the petition has been received by the Private Bill Office.
 
-      %li published, including your name and address, on UK Parliament’s website.
+    %p We will publish your petition on UK Parliament’s website. This will include your name and address.
 
     %p The personal information you have provided may be kept in a database by both Private Bill Offices.
 
@@ -32,21 +41,25 @@
   .container
     %h2 Communications
 
-    %p Private Bill Office staff may call or email any of the named petitioners to verify the information provided.
+    %p Private Bill Office staff may call or email any of the people named in the petition to verify the information provided. 
 
     %p Communications may be stored in databases to keep track of information you have given or received. This information may be shared between the Private Bill Offices.
 
 %section
   .container
-    .block--border__bottom
-      %h2 Consent and confirmation
+    %h2 Consent and confirmation
 
-      %p The information you have provided in the petition and online form is accurate.
+    %p The information you have provided in the petition and online form is accurate.
 
-      %p If you have filled in the form on behalf of an individual, a group or organisation(s), you have been authorised to do so.
+    %p If you have completed the form on behalf of an individual, a group of individuals, an organisation, or a group of organisations, you have been authorised to do so.
 
-%section
-  .container
+    %br
+
     = form_tag hybrid_bill_path(@business_id, step: 'terms-conditions') do
-      = hidden_field_tag 'hybrid_bill_terms[accepted]', true
-      = submit_tag 'I agree - send petition', class: 'btn--primary'
+      .block--border__bottom
+        %fieldset
+          %legend.sr-only Please confirm you agree to the terms and conditions
+          = check_box_tag 'enableSubmit'
+          = label_tag 'enableSubmit', 'I agree to the terms and conditions'
+          = hidden_field_tag 'hybrid_bill_terms[accepted]', true
+      = submit_tag 'Send petition', class: 'btn--primary'
