--- a/app/views/parliaments/houses/show.html.haml
+++ b/app/views/parliaments/houses/show.html.haml
@@ -10,7 +10,7 @@
     %ul.list--block
       %li
         .list--details
-          %h2= link_to(t('mp_plural'), parliament_house_members_path(@parliament.graph_id, @house.graph_id))
+          %h2= link_to(t('mps_and_lords'), parliament_house_members_path(@parliament.graph_id, @house.graph_id))
       %li
         .list--details
           %h2= link_to(t('party_plural').capitalize, parliament_house_parties_path(@parliament.graph_id, @house.graph_id))
