--- a/app/views/parliaments/parties/show.html.haml
+++ b/app/views/parliaments/parties/show.html.haml
@@ -9,4 +9,4 @@
     %ul.list--block
       %li
         .list--details
-          %h2= link_to(t('mp_plural'), parliament_party_members_path(@parliament.graph_id, @party.graph_id))
+          %h2= link_to(t('mps_and_lords'), parliament_party_members_path(@parliament.graph_id, @party.graph_id))
