[GTP] HTML update to article template

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -1,7 +1,8 @@
 .section--primary
-  .container--offset
-    %h1= @article.title
-    = MarkdownHelper.markdown(@article.article_summary)
+  .container
+    .block--border__bottom.block--offset
+      %h1= @article.title
+      = MarkdownHelper.markdown(@article.article_summary)
 
 %section#content{ tabindex: "0" }
   %article
