--- a/app/views/hybrid_bills/index.haml
+++ b/app/views/hybrid_bills/index.haml
@@ -7,19 +7,23 @@
     %p
       Hybrid Bills mix the characteristics of
       = link_to 'Public Bills', 'http://www.parliament.uk/about/how/laws/bills/public/', target: '_blank'
+      %span.sr-only
+        This link will open in a new window
       and
       = link_to 'Private Bills', 'http://www.parliament.uk/about/how/laws/bills/private/', target: '_blank'
+      %span.sr-only
+        This link will open in a new window
       \. They often propose works of national importance in a specific area of the UK.
 
     %p For example, the Channel Tunnel Bills passed in the 1970s and 1980s and the Crossrail Bill passed in 2008.
 
     %p Changes to the law proposed by a Hybrid Bill affect the general public and impact specific individuals, groups or organisations.
 
-%section
-  .container
-    %h2 Who decides if it’s a Hybrid Bill?
-
-    %p The Public Bill Offices decide whether a Bill is in the Hybrid category. The House of Commons and House of Lords debate these Bills. They go through a longer process than Public Bills.
+    %p
+      To find out more, read our
+      = link_to 'Hybrid Bill Background Paper', 'http://researchbriefings.parliament.uk/ResearchBriefing/Summary/SN06736', target: '_blank'
+      %span.sr-only
+        This link will open in a new window
 
 %section
   .container
@@ -27,13 +31,13 @@
 
     %p Any individual, group of individuals, organisation or group of organisations affected by a Hybrid Bill can object to it.
 
-    %p This can lead to changes being made to the Bill, called alternative provisions.
+    %p This can lead to changes being made to the Bill, called additional provisions.
 
-    %p Objecting to alternative provisions is separate to objecting to the original Bill.
+    %p Objecting to additional provisions is separate to objecting to the original Bill.
 
 %section
   .container
     %h2 Open Hybrid Bills
 
-    .section--major
+    .section--minor
       = link_to 'Object to the High Speed Rail (West Midlands – Crewe) Bill', hybrid_bill_path('1'), class: 'btn--primary'
