--- a/app/views/hybrid_bills/pre.html.haml
+++ b/app/views/hybrid_bills/pre.html.haml
@@ -1,9 +1,11 @@
+- page_title = title('Object to the High Speed Rail (West Midlands – Crewe) Bill')
+
 #content.section--primary{ tabindex: '0' }
   .container
     %h1 Object to the High Speed Rail (West Midlands – Crewe) Bill
     %br
     .status--highlight
-      %p The petitioning period will open on 30 January 2018.
+      %p The petitioning period will open at 12.00am on 31 January 2018.
 
 %section
   .container
@@ -22,5 +24,5 @@
 
     %p
       For more information on how to object, visit the
-      = link_to 'High Speed Rail (West Midlands – Crewe) Bill Committee', 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank'
+      = link_to 'High Speed Rail (West Midlands – Crewe) Bill Committee website', 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank'
       %span.sr-only (This link will open in a new window).
