--- a/app/views/hybrid_bills/steps/forms/_details_form.haml
+++ b/app/views/hybrid_bills/steps/forms/_details_form.haml
@@ -23,7 +23,7 @@
     %span Are you based in the UK?
     %fieldset
       %legend.sr-only Please select the country you're based in
-      = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: f, attribute: :in_the_uk, yes_class: 'country-uk', no_class: 'country-row' }
+      = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: f, attribute: :in_the_uk, yes_class: 'js-country-uk', no_class: 'js-country-row' }
     #countrySelect
       = render partial: 'hybrid_bills/steps/forms/components/country_select', locals: { f: f, attribute: :country }
     %br
@@ -32,7 +32,7 @@
 
     = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :address_2, label_value: 'Address line 2 (optional)', aria: { required: 'false' }, maxlength: 255 }
 
-    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :postcode, label_value: 'Post code', class: 'input__sm', aria: { required: 'true' }, maxlength: 8, pattern:'[0-9a-zA-Z ]{5,}' }
+    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :postcode, label_value: 'Post code', class: 'input__sm', aria: { required: 'true' }, maxlength: 8, pattern: '[0-9a-zA-Z ]{5,}', data: { postcode: 'petitioner' } }
 
     = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :email, aria: { required: 'true' }, maxlength: 255 }
 
@@ -43,7 +43,7 @@
   %h2 Who should be contacted about this petition?
   %fieldset
     %legend.sr-only Please confrim who should be contacted about this petition
-    = render partial: 'hybrid_bills/steps/forms/components/radio_buttons_reversed', locals: { f: f, attribute: :has_a_rep, no_label: 'Individual above', no_class: 'indCheck', yes_label: 'Another contact', yes_class: 'repCheck' }
+    = render partial: 'hybrid_bills/steps/forms/components/radio_buttons_reversed', locals: { f: f, attribute: :has_a_rep, no_label: 'Individual above', no_class: 'js-ind-check', yes_label: 'Another contact', yes_class: 'js-rep-check' }
 
   .block--border__bottom
     #repForm
@@ -60,22 +60,22 @@
           %span Are you based in the UK?
           %fieldset
             %legend.sr-only Please select the country you're based in
-            = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: a, attribute: :in_the_uk, yes_class: 'country-uk-rep', no_class: 'country-row-rep' }
+            = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: a, attribute: :in_the_uk, yes_class: 'js-country-uk-rep', no_class: 'js-country-row-rep' }
           #countrySelectRep
             = render partial: 'hybrid_bills/steps/forms/components/country_select', locals: { f: a, attribute: :country }
           %br
 
           = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :address_1, label_value: 'Address line 1', aria: { required: 'true' }, maxlength: 255 }
 
-          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :address_2, :label_value => 'Address line 2 (optional)', aria: { required: 'false' }, maxlength: 255 }
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :address_2, label_value: 'Address line 2 (optional)', aria: { required: 'false' }, maxlength: 255 }
 
-          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :postcode, :label_value => 'Post code', class: 'input__sm', aria: { required: 'true' }, maxlength: 20 }
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :postcode, label_value: 'Post code', class: 'input__sm', aria: { required: 'true' }, maxlength: 20 }
 
           = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :email, aria: { required: 'true' }, maxlength: 255 }
 
           = render partial: 'hybrid_bills/steps/forms/components/check_box', locals: { f: a, attribute: :receive_updates }
 
-          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :telephone, :label_value => 'Phone', class: 'input__md', aria: { required: 'true' }, maxlength: 20 }
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :telephone, label_value: 'Phone', class: 'input__md', aria: { required: 'true' }, maxlength: 20 }
 
   = f.submit 'Next', class: 'btn--primary'
 
