--- a/app/views/hybrid_bills/show.haml
+++ b/app/views/hybrid_bills/show.haml
@@ -25,7 +25,8 @@
 
     %p
       To find out more about the Bill, visit the
-      = link_to 'High Speed Two (HS2) Limited website', 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank'
+      = succeed "." do
+        = link_to 'High Speed Two (HS2) Limited website', 'https://www.gov.uk/government/organisations/high-speed-two-limited', target: '_blank'
       %span.sr-only (This link will open in a new window).
 
 %section
@@ -46,7 +47,8 @@
 
     %p
       The main contact will receive all petition communications. They will usually be invited to give evidence about it to the
-      = link_to 'High Speed Rail (West Midlands – Crewe) Bill Committee', 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank'
+      = succeed "." do
+        = link_to 'High Speed Rail (West Midlands – Crewe) Bill Committee', 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank'
       %span.sr-only (This link will open in a new window).
 
 %section
