--- a/app/views/hybrid_bills/steps/document-submission.haml
+++ b/app/views/hybrid_bills/steps/document-submission.haml
@@ -53,5 +53,5 @@
         For more information email
         = link_to 'prbohoc@parliament.uk', 'mailto:prbohoc@parliament.uk'
         or phone
-        = link_to '020 7219 3250', 'tel:02072193250'
-        \.
+        = succeed "." do
+          = link_to '020 7219 3250', 'tel:02072193250'
