--- a/app/views/hybrid_bills/email/_body.haml
+++ b/app/views/hybrid_bills/email/_body.haml
@@ -39,4 +39,8 @@
               = link_to '020 7219 3250', 'tel:02072193250'
               \.
 
-      = link_to 'Finish', hybrid_bill_path(@business_id), class: 'btn--primary'
+      %h2 Bill updates
+      %p
+        For news and updates on the Bill, visit the
+        = link_to 'High Speed Rail (West Midlands – Crewe) Bill Committee website', 'http://www.parliament.uk/business/committees/committees-a-z/commons-select/high-speed-rail-west-midlands-crewe-bill-select-committee-commons', target: '_blank'
+        %span.sr-only (This link will open in a new window).
