--- a/app/views/hybrid_bills/steps/writing-your-petition-online.haml
+++ b/app/views/hybrid_bills/steps/writing-your-petition-online.haml
@@ -41,8 +41,8 @@
             If you need a different format, email
             = link_to 'prbohoc@parliament.uk', 'mailto:prbohoc@parliament.uk'
             or phone
-            = link_to '020 7219 3250', 'tel:02072193250'
-            \.
+            = succeed "." do
+              = link_to '020 7219 3250', 'tel:02072193250'
 
 %section#complete-petition.section--major
   .container
@@ -87,5 +87,5 @@
           For more information email
           = link_to 'prbohoc@parliament.uk', 'mailto:prbohoc@parliament.uk'
           or phone
-          = link_to '020 7219 3250', 'tel:02072193250'
-          \.
+          = succeed "." do
+            = link_to '020 7219 3250', 'tel:02072193250'
