--- a/app/views/hybrid_bills/steps/writing-your-petition-online.haml
+++ b/app/views/hybrid_bills/steps/writing-your-petition-online.haml
@@ -1,3 +1,5 @@
+- page_title = title('Writing your petition online. Object to the High Speed Rail (West Midlands – Crewe) Bill')
+
 #content.hero.theme--grey-4{ tabindex: '0' }
   .container
     %h1
