--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -2,22 +2,22 @@
   .container
     %h1= title(@person.display_name)
 
-    - if @most_recent_incumbency.nil? || @most_recent_incumbency.house.name == 'House of Lords'
-      %p= @person.full_title
-      %p= "#{@person.full_name}" unless @person.display_name == @person.full_name
+    %p.lead
+      - if @most_recent_incumbency.nil? || @most_recent_incumbency.house.name == 'House of Lords'
+        ="#{@person.full_name}" unless @person.display_name == @person.full_name
 
-    - if @current_party_membership && @current_incumbency
-      - current_party_details = link_to(@current_party_membership.party.name, party_path(@current_party_membership.party.graph_id))
+      - if @current_party_membership && @current_incumbency
+        - current_party_details = link_to(@current_party_membership.party.name, party_path(@current_party_membership.party.graph_id))
 
-    - unless @person.statuses[:house_membership_status].empty?
-      - if @person.current_mp?
-        %p.lead
+      - unless @person.statuses[:house_membership_status].empty?
+        - if @person.current_mp?
           = current_party_details if current_party_details
           = t('.mp_for')
           = link_to(@current_incumbency.constituency.name, constituency_path(@current_incumbency.constituency.graph_id))
-      - else
-        %p.lead
-          = current_party_details if current_party_details
+        - else
+          - unless @person.display_name == @person.full_name
+            %br
+          = current_party_details + ' -' if current_party_details
           = @person.statuses[:house_membership_status].join(' and ')
 
     - if Pugin::Feature::Bandiera.show_list_images?
